--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
 <div class="g-tab__tab-group">
-<ul class="g-tab__tab-list">
+<ul class="g-tab__tab-list" role="tablist">
   <li role="tab" class="g-tab__tab"><a href="#tab1">Tab 1</a></li>
   <li role="tab" class="g-tab__tab"><a href="#tab2">Tab 2</a></li>
   <li role="tab" class="g-tab__tab"><a href="#tab3">Tab 3</a></li>
@@ -29,7 +29,7 @@
 </div>
 
 <div class="g-tab__tab-group">
-<ul class="g-tab__tab-list">
+<ul class="g-tab__tab-list" role="tablist">
   <li role="tab" class="g-tab__tab"><a href="#tab4">Tab 4</a></li>
   <li role="tab" class="g-tab__tab"><a href="#tab5">Tab 5</a></li>
   <li role="tab" class="g-tab__tab"><a href="#tab6">Tab 6</a></li>
