--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <li class="g-tab__tab"><a href="#tab3">Tab 3</a></li>
 </ul>
 
-<section id="tab1" role="tabpanel" class="g-tab__tab-panel">
+<section id="tab1" class="g-tab__tab-panel">
 <h3>Tab 1</h3>
 </section>
 
-<section id="tab2" role="tabpanel" class="g-tab__tab-panel">
+<section id="tab2" class="g-tab__tab-panel">
 <h3>Tab 2</h3>
 </section>
 
-<section id="tab3" role="tabpanel" class="g-tab__tab-panel">
+<section id="tab3" class="g-tab__tab-panel">
 <h3>Tab 3</h3>
 </section>
 </div>
@@ -35,15 +35,15 @@
   <li class="g-tab__tab"><a href="#tab6">Tab 6</a></li>
 </ul>
 
-<section id="tab4" role="tabpanel" class="g-tab__tab-panel">
+<section id="tab4" class="g-tab__tab-panel">
 <h3>Tab 4</h3>
 </section>
 
-<section id="tab5" role="tabpanel" class="g-tab__tab-panel">
+<section id="tab5" class="g-tab__tab-panel">
 <h3>Tab 5</h3>
 </section>
 
-<section id="tab6" role="tabpanel" class="g-tab__tab-panel">
+<section id="tab6" class="g-tab__tab-panel">
 <h3>Tab 6</h3>
 </section>
 </div>
