--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Super Tabs</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="">
   </head>
   <body>
+
+<h1>Super Tabs</h1>
+
+This is the text before the first tab group.
 
 <div class="g-tab__tab-group">
 <ul class="g-tab__tab-list">
@@ -17,14 +21,17 @@
 
 <section id="tab1" class="g-tab__tab-panel">
 <h3>Tab 1</h3>
+Tab 1 first section.
 </section>
 
 <section id="tab2" class="g-tab__tab-panel">
 <h3>Tab 2</h3>
+Tab 2 first section.
 </section>
 
 <section id="tab3" class="g-tab__tab-panel">
 <h3>Tab 3</h3>
+Tab 3 first section.
 </section>
 </div>
 
@@ -37,17 +44,22 @@
 
 <section id="tab4" class="g-tab__tab-panel">
 <h3>Tab 4</h3>
+Tab 4 first section.
 </section>
 
 <section id="tab5" class="g-tab__tab-panel">
 <h3>Tab 5</h3>
+Tab 5 first section.
 </section>
 
 <section id="tab6" class="g-tab__tab-panel">
 <h3>Tab 6</h3>
+Tab 6 first section.
 </section>
 </div>
 
+<br>
+This is the text after the second tab group.
 
     <script src="js/script.js"></script>
   </body>
